# python-fcntl

./: .gitignore  LICENSE.txt  README.md  __init__.py  fcntl.py  pyproject.toml
.github/workflows/: release.yaml
