[tool.poetry]
name = "fcntl"
version = "1.0.0"
description = "Python fcntl polyfill for non-nix environments"
authors = ["Lewis Cowles <lewiscowles@me.com>"]
maintainers = [
    "Lewis Cowles <lewiscowles@me.com>"
]
homepage = "https://github.com/Lewiscowles1986/python-fnctl"
repository = "https://github.com/Lewiscowles1986/python-fnctl"
documentation = "https://github.com/Lewiscowles1986/python-fnctl"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
include = [
    { path = "LICENSE.txt", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
tox = "^4.6.4"
rstcheck = "^6.1.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"